--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pytz~=2022.1
-pymongo~=4.2.0
-Scrapy~=2.6.2
-PyDispatcher~=2.0.5
-itemadapter~=0.6.0
+itemadapter==0.6.0
+PyDispatcher==2.0.5
+pymongo==4.2.0
+pytz==2022.1
+Scrapy==2.6.2
+unicode_slugify==0.1.5
