--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 attrs==22.1.0
 Automat==20.2.0
+boto3==1.24.49
+botocore==1.27.49
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
@@ -31,6 +33,7 @@ pytz==2022.1
 queuelib==1.6.2
 requests==2.28.1
 requests-file==1.5.1
+s3transfer==0.6.0
 Scrapy==2.6.2
 service-identity==21.1.0
 sgmllib3k==1.0.0
